# NebulaIM

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
admin_service/: CMakeLists.txt
admin_service/include/: AdminServiceContext.h  AdminServiceImpl.h
admin_service/src/: AdminServiceContext.cpp  AdminServiceImpl.cpp  main.cpp
benchmark/: BenchArgs.h  CMakeLists.txt  GatewayBenchClient.cpp  GatewayBenchClient.h  README.md  Stats.cpp  Stats.h  bench_config.conf  bench_gateway_login.cpp  bench_group_message.cpp  bench_push_e2e.cpp  bench_single_message.cpp  bench_tcp_connections.cpp
common/: CMakeLists.txt
common/app/: ShutdownSignal.cpp  ShutdownSignal.h
common/async/: FutureCallback.cpp  FutureCallback.h  RpcExecutor.cpp  RpcExecutor.h
common/auth/: PasswordHasher.cpp  PasswordHasher.h  TokenManager.cpp  TokenManager.h
common/circuitbreaker/: CircuitBreaker.cpp  CircuitBreaker.h  CircuitBreakerManager.cpp  CircuitBreakerManager.h
common/config/: Config.cpp  Config.h  StorageConfig.cpp  StorageConfig.h
common/conversation/: ConversationDao.cpp  ConversationDao.h  ConversationServiceHelper.cpp  ConversationServiceHelper.h
common/dao/: DeviceDao.cpp  DeviceDao.h  FriendRequestDao.cpp  FriendRequestDao.h  GroupDao.cpp  GroupDao.h  MessageDao.cpp  MessageDao.h  MessageReceiptDao.cpp  MessageReceiptDao.h  OfflineMessageDao.cpp  OfflineMessageDao.h  RelationDao.cpp  RelationDao.h  UserDao.cpp  UserDao.h
common/db/: MySqlConnection.cpp  MySqlConnection.h  MySqlConnectionPool.cpp  MySqlConnectionPool.h  MySqlResult.cpp  MySqlResult.h  MySqlTransaction.cpp  MySqlTransaction.h
common/discovery/: ServiceDiscovery.h  StaticServiceResolver.cpp  StaticServiceResolver.h
common/error/: ErrorCode.cpp  ErrorCode.h
common/gateway/: ConnectionContext.cpp  ConnectionContext.h  ConnectionManager.cpp  ConnectionManager.h  GatewayBackendClients.cpp  GatewayBackendClients.h  GatewayOnlineManager.cpp  GatewayOnlineManager.h  GatewayPacketHelper.cpp  GatewayPacketHelper.h  GatewayRouter.cpp  GatewayRouter.h
common/health/: HealthStatus.cpp  HealthStatus.h
common/kafka/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h
common/log/: Logger.cpp  Logger.h
common/message/: ConversationId.cpp  ConversationId.h  MessageDeduplicator.cpp  MessageDeduplicator.h  MessageIdGenerator.cpp  MessageIdGenerator.h  MessageKafkaPayload.cpp  MessageKafkaPayload.h
common/monitor/: Metrics.cpp  Metrics.h  MetricsHttpServer.cpp  MetricsHttpServer.h  MetricsRegistry.cpp  MetricsRegistry.h  MetricsRuntime.cpp  MetricsRuntime.h
common/net/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h
common/outbox/: OutboxDao.cpp  OutboxDao.h  OutboxWorker.cpp  OutboxWorker.h
common/protocol/: MessageType.cpp  MessageType.h  Packet.cpp  Packet.h  PacketCodec.cpp  PacketCodec.h  PacketHeader.cpp  PacketHeader.h  ProtocolError.cpp  ProtocolError.h
common/push/: GatewayClient.cpp  GatewayClient.h  GatewayClientManager.cpp  GatewayClientManager.h  OnlineStatusManager.cpp  OnlineStatusManager.h  PushDispatcher.cpp  PushDispatcher.h  PushRetryManager.cpp  PushRetryManager.h
common/ratelimit/: RateLimiter.cpp  RateLimiter.h  TokenBucket.cpp  TokenBucket.h
common/redis/: RedisClient.cpp  RedisClient.h
common/rpc/: GrpcClient.cpp  GrpcClient.h  GrpcServer.cpp  GrpcServer.h  GrpcTlsCredentials.cpp  GrpcTlsCredentials.h  InternalRpcAuth.cpp  InternalRpcAuth.h  RpcMetadata.cpp  RpcMetadata.h
common/security/: AdminAuth.cpp  AdminAuth.h
common/thread/: ThreadPool.cpp  ThreadPool.h
common/tls/: TlsConfig.cpp  TlsConfig.h  TlsContext.cpp  TlsContext.h
common/trace/: OtlpTraceExporter.cpp  OtlpTraceExporter.h  TraceContext.cpp  TraceContext.h  TraceId.cpp  TraceId.h  TraceManager.cpp  TraceManager.h  TraceSpan.cpp  TraceSpan.h
common/utils/: Defer.h  NonCopyable.h  TimeUtil.cpp  TimeUtil.h
common/websocket/: WebSocketCodec.cpp  WebSocketCodec.h  WebSocketFrame.cpp  WebSocketFrame.h  WebSocketHandshake.cpp  WebSocketHandshake.h
device_service/: CMakeLists.txt
device_service/include/: DeviceServiceContext.h  DeviceServiceImpl.h
device_service/src/: DeviceServiceContext.cpp  DeviceServiceImpl.cpp  main.cpp
examples/: CMakeLists.txt  echo_server.cpp  gateway_client_demo.cpp  gateway_push_demo.cpp  gateway_websocket_client_demo.cpp  grpc_user_client.cpp  message_service_client.cpp  protobuf_packet_demo.cpp  protocol_echo_server.cpp  push_kafka_produce_demo.cpp  push_service_client.cpp  relation_service_client.cpp  storage_demo.cpp  user_register_login_client.cpp
gateway/: CMakeLists.txt
message_service/: CMakeLists.txt
proto/: CMakeLists.txt  common.proto  message.proto  relation.proto  user.proto
tests/: CMakeLists.txt  TestDeps.h  test_admin_auth.cpp  test_backend_final_e2e.cpp  test_buffer.cpp  test_circuit_breaker.cpp  test_config.cpp  test_connection_manager.cpp  test_conversation_dao.cpp  test_conversation_id.cpp  test_conversation_service_helper.cpp  test_device_service_impl.cpp  test_event_loop.cpp  test_friend_request_flow.cpp  test_gateway_client.cpp  test_gateway_client_flow.cpp  test_gateway_online_manager.cpp  test_gateway_packet_helper.cpp  test_gateway_router.cpp  test_gateway_service_impl.cpp  test_gateway_tls_config.cpp  test_group_dao_extra.cpp  test_grpc_tls_config.cpp  test_grpc_user_service.cpp  test_inet_address.cpp  test_kafka_consumer.cpp  test_kafka_producer.cpp  test_logger.cpp  test_message_dao.cpp  test_message_deduplicator.cpp  test_message_id_generator.cpp  test_message_recall.cpp  test_message_service_impl.cpp  test_message_service_integration.cpp  test_message_type.cpp  test_metrics_http_server.cpp  test_metrics_registry.cpp  test_mysql_pool.cpp  test_online_status_manager.cpp  test_outbox_dao.cpp  (+27 more)
(+134 files in other folders)
